[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/pixel-96x12.png" type="Texture" id=1]
[ext_resource path="res://Scripts/LegMovement.gd" type="Script" id=2]

[node name="Leg" type="Position2D"]
script = ExtResource( 2 )

[node name="Seg1" type="Sprite" parent="."]
position = Vector2( 48, -9.31323e-10 )
texture = ExtResource( 1 )

[node name="Joint1" type="Position2D" parent="."]
position = Vector2( 96, 0 )

[node name="Seg2" type="Sprite" parent="Joint1"]
position = Vector2( 48, 0 )
texture = ExtResource( 1 )

[node name="Joint2" type="Position2D" parent="Joint1"]
position = Vector2( 96, 0 )

[node name="Seg3" type="Sprite" parent="Joint1/Joint2"]
position = Vector2( 48, 0 )
texture = ExtResource( 1 )

[node name="End" type="Position2D" parent="Joint1/Joint2"]
position = Vector2( 96, 0 )
